# ED_Lib

./: .gitignore  CMakeLists.txt  ED.cpp  ED.h  EDCircles.cpp  EDCircles.h  EDColor.cpp  EDColor.h  EDLib.h  EDLines.cpp  EDLines.h  EDPF.cpp  EDPF.h  NFA.cpp  NFA.h  README.md  binding.cpp  example.py  setup.py  test.cpp
python/edlib/: __init__.py  __init__.pyi
